public enum Sortings
{
    AZ,
    ZA,
    NEWEST,
    OLDEST
}